<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/medium_padding">

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:id="@+id/recycler_view"
        android:layout_height="wrap_content"
        tools:context=".create_account.CreateAccountScene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_margin"
            android:paddingEnd="@dimen/default_margin">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/create_new_account"
                android:gravity="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:padding="@dimen/small_padding" />

            <TextView
                android:id="@+id/business_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:text="@string/fill_up_account_info"
                android:gravity="center"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="italic"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/medium_padding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/business_info"
                android:hint="@string/account_name"
                style="@style/MyTextInputLayoutStyle"
                android:id="@+id/ti_account_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/et_account_name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/medium_padding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_account_name"
                android:hint="@string/account_type"
                style="@style/MyMenu"
                app:endIconTint="@color/colorAccent"
                android:id="@+id/ti_account_type">

                <AutoCompleteTextView
                    android:id="@+id/et_account_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/medium_padding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_account_type"
                android:hint="@string/opening_balance"
                style="@style/MyTextInputLayoutStyle"
                android:id="@+id/ti_opening_balance">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/et_opening_balance"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_opening_balance"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/back"
                android:textColor="@color/colorAccent"
                android:id="@+id/btn_back"
                android:layout_marginTop="@dimen/medium_padding"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_opening_balance"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/create"
                android:textColor="@color/colorAccent"
                android:id="@+id/btn_create_account"
                android:layout_marginTop="@dimen/medium_padding"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
